// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevServer refresh data on file change 1`] = `
"
        <html>
            <head> 
                <script src=\\".sambal/_dev_server_/browser/main.47d0e86dd346cb1ef81b.js\\"></script>
            <script type=\\"application/ld+json\\">{
    &quot;@context&quot;: &quot;https://schema.org&quot;,
    &quot;@type&quot;: &quot;BlogPosting&quot;,
    &quot;headline&quot;: &quot;Test blog changed!&quot;,
    &quot;text&quot;: &quot;\\\\n\\\\nHello world3\\\\n&quot;,
    &quot;encodingFormat&quot;: &quot;text/markdown&quot;
}</script><link rel=\\"canonical\\" href=\\"https://example.com/testblog\\"><meta name=\\"og:url\\" content=\\"https://example.com/testblog\\"><title>Test blog changed!</title><meta name=\\"twitter:title\\" content=\\"Test blog changed!\\"><meta name=\\"og:title\\" content=\\"Test blog changed!\\"></head>
            <body>
                <h1>Hello from mock theme</h1>
                <p>test1</p>
            
        <script>
            function openSocket() {
                const sambalws = new WebSocket(\\"ws://localhost:3001/\\");
                sambalws.onopen = function() {
                    console.log('Sambal dev server connected');
                };
                
                sambalws.onmessage = function(e) {
                    if (e.data === \\"refresh\\") {
                        console.log('Reloading...');
                        window.location.reload();
                    }
                }
    
                sambalws.onclose = function(e) {
                    console.log(\\"Sambal dev server disconnected\\");
                    setTimeout(() => {
                        openSocket();
                    }, 2000);
                };
            }
            openSocket();
        </script></body>
        </html>
    "
`;

exports[`DevServer render html 1`] = `
"
        <html>
            <head> 
                <script src=\\".sambal/_dev_server_/browser/main.47d0e86dd346cb1ef81b.js\\"></script>
            <script type=\\"application/ld+json\\">{
    &quot;@context&quot;: &quot;https://schema.org&quot;,
    &quot;@type&quot;: &quot;SoftwareSourceCode&quot;,
    &quot;name&quot;: &quot;Sambal&quot;,
    &quot;headline&quot;: &quot;A linked data static site generator&quot;,
    &quot;description&quot;: &quot;Some description about Sambal&quot;,
    &quot;text&quot;: &quot;&lt;need to &lt;&gt; escape&gt;&quot;
}</script><link rel=\\"canonical\\" href=\\"https://example.com/\\"><meta name=\\"og:url\\" content=\\"https://example.com/\\"><title>A linked data static site generator</title><meta name=\\"twitter:title\\" content=\\"A linked data static site generator\\"><meta name=\\"og:title\\" content=\\"A linked data static site generator\\"><meta name=\\"description\\" content=\\"Some description about Sambal\\"><meta name=\\"twitter:description\\" content=\\"Some description about Sambal\\"><meta name=\\"og:description\\" content=\\"Some description about Sambal\\"></head>
            <body>
                <h1>Hello from mock theme</h1>
                <p>test1</p>
            
        <script>
            function openSocket() {
                const sambalws = new WebSocket(\\"ws://localhost:3001/\\");
                sambalws.onopen = function() {
                    console.log('Sambal dev server connected');
                };
                
                sambalws.onmessage = function(e) {
                    if (e.data === \\"refresh\\") {
                        console.log('Reloading...');
                        window.location.reload();
                    }
                }
    
                sambalws.onclose = function(e) {
                    console.log(\\"Sambal dev server disconnected\\");
                    setTimeout(() => {
                        openSocket();
                    }, 2000);
                };
            }
            openSocket();
        </script></body>
        </html>
    "
`;
